--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -10,14 +10,14 @@ jobs:
         python-version: ["3.10"]
     steps:
     - uses: actions/checkout@v3
+    - name: Install Python dependencies
+      uses: py-actions/py-dependency-install@v4
+      with:
+        path: "package.txt"
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-        requirements: package.txt
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
     - name: Analysing the code with pylint
       run: |
-        pylint src/
+        pylint src/*.py
