--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,10 +1,10 @@
-name: Pylint
+name: Pytest
 
 on: [push]
 
 jobs:
   build:
-    name: pylint
+    name: pytest
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -19,10 +19,6 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Analysing the code with pylint
-      run: |
-        pylint src/*.py
-
     - name: Run test
       run: |
         python -m pytest
