--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -4,25 +4,29 @@ on: [push]
 
 jobs:
   build:
-    name: pylint
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.10"]
-    steps:
-    - uses: actions/checkout@v3
-    - name: Install Python dependencies
-      uses: py-actions/py-dependency-install@v4
-      with:
-        path: "package.txt"
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Analysing the code with pylint
-      run: |
-        pylint src/*.py
+    my_first_job:
+      name: pylint
+      runs-on: ubuntu-latest
+      strategy:
+        matrix:
+          python-version: ["3.10"]
+      steps:
+      - uses: actions/checkout@v3
+      - name: Install Python dependencies
+        uses: py-actions/py-dependency-install@v4
+        with:
+          path: "package.txt"
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Analysing the code with pylint
+        run: |
+          pylint src/*.py
 
-    - name: Run test
-      run: |
-        python -m pytest
+    my_second_job:
+      name: pytest
+      steps:
+      - name: Run test
+        run: |
+          python -m pytest
