--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -2,36 +2,15 @@ name: Pylint
 
 on: [push]
 
-pylint:
-  build:
-    name: pylint
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.10"]
-    steps:
-    - uses: actions/checkout@v3
-    - name: Install Python dependencies
-      uses: py-actions/py-dependency-install@v4
-      with:
-        path: "package.txt"
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Analysing the code with pylint
-      run: |
-        pylint src/*.py
-
-pytest:
-  needs: pylint
-  name: pytest
-  build:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [ "3.10" ]
-    steps:
+jobs:
+  job1:
+    build:
+      name: pylint
+      runs-on: ubuntu-latest
+      strategy:
+        matrix:
+          python-version: ["3.10"]
+      steps:
       - uses: actions/checkout@v3
       - name: Install Python dependencies
         uses: py-actions/py-dependency-install@v4
@@ -41,6 +20,28 @@ pytest:
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Run Pytest
+      - name: Analysing the code with pylint
         run: |
-          python -m pytest
+          pylint src/*.py
+
+  job2:
+    needs: pylint
+    name: pytest
+    build:
+      runs-on: ubuntu-latest
+      strategy:
+        matrix:
+          python-version: [ "3.10" ]
+      steps:
+        - uses: actions/checkout@v3
+        - name: Install Python dependencies
+          uses: py-actions/py-dependency-install@v4
+          with:
+            path: "package.txt"
+        - name: Set up Python ${{ matrix.python-version }}
+          uses: actions/setup-python@v3
+          with:
+            python-version: ${{ matrix.python-version }}
+        - name: Run Pytest
+          run: |
+            python -m pytest
