--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -3,32 +3,27 @@ name: Pylint
 on: [push]
 
 jobs:
-  build:
-    name: build
+  pylint:
+    name: pylint
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ "3.10" ]
+        python-version: ["3.10"]
     steps:
-      - uses: actions/checkout@v3
-      - name: Install Python dependencies
-        uses: py-actions/py-dependency-install@v4
-        with:
-          path: "package.txt"
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v3
-  job1:
-    name: pylint
-    steps:
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v3
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Analysing the code with pylint
-        run: |
-          pylint src/*.py
+    - uses: actions/checkout@v3
+    - name: Install Python dependencies
+      uses: py-actions/py-dependency-install@v4
+      with:
+        path: "package.txt"
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v3
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Analysing the code with pylint
+      run: |
+        pylint src/*.py
 
-  job2:
+  pytest:
     name: pytest
     runs-on: ubuntu-latest
     strategy:
