--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -5,7 +5,7 @@ on: [push]
 jobs:
   pylint:
     name: pylint
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     strategy:
       matrix:
         python-version: ["3.10"]
@@ -25,7 +25,7 @@ jobs:
 
   pytest:
     name: pytest
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     strategy:
       matrix:
         python-version: [ "3.10" ]
