--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v3
-    - name: Analysing the code with pylint
-      run: cd ~/testrepo | git pull | docker-compose up -d --build
+    - name: pull and up serve
+      run: cd ~/testrepo | git pull | docker-compose down | docker-compose up -d --build
 
 
