--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -8,6 +8,6 @@ jobs:
     runs-on: self-hosted
     steps:
     - name: pull and up serve
-      run: cd ~/testrepo | git pull | docker-compose down | docker-compose up -d --build
+      run: cd ~/testrepo | git pull | docker-compose up -d --build
 
 
