--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,6 @@ jobs:
     runs-on: self-hosted
     steps:
     - name: pull and up serve
-      run: cd ~/testrepo | git pull | docker-compose up -d --build
+      run: cd ~/testrepo | git pull | docker-compose down | docker-compose up -d --build
 
 
